# SpecsHD

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DOCS.md  README.md  keycodes.txt
.github/workflows/: release.yml
injector/: Cargo.toml
specs/: CHANGELOG.md  CMakeLists.txt  config.cpp  config.h  dllmain.cpp  drawing.cpp  drawing.h  entities.h  game_hooks.cpp  game_hooks.h  hd.cpp  hd.h  hd_entity.h  hooks.cpp  hooks.h  inputs.cpp  inputs.h  level.cpp  level.h  memory.cpp  memory.h  seeded_items.cpp  seeded_items.h  sounds.h  specs.cpp  specs.h  state.cpp  state.h  ui.cpp  ui.h  utils.cpp  utils.h  zoom.cpp  zoom.h
specs/mods/: biglunky.cpp  biglunky.h  dark_mode.cpp  dark_mode.h  full_spelunky.cpp  full_spelunky.h  seeded_mode.cpp  seeded_mode.h  tunnel_man.cpp  tunnel_man.h  uplunky.cpp  uplunky.h
specs/tabs/: debug_tab.cpp  debug_tab.h  level_tab.cpp  level_tab.h  mods_tab.cpp  mods_tab.h  players_tab.cpp  players_tab.h  selected_tab.cpp  selected_tab.h  settings_tab.cpp  settings_tab.h  spawn_tab.cpp  spawn_tab.h
tools/: current_z.py
utils/: importEntityClasses.py
