[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "specs"

[dependencies]
byteorder = "1"
thiserror = "1"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1"
winapi = {version = "0.3.9", features = [
  "handleapi",
  "memoryapi",
  "minwinbase",
  "ntdef",
  "processthreadsapi",
  "psapi",
  "tlhelp32",
  "winnt",
  "synchapi",
]}